# Mini_SONiC

./: .gitignore  .solution  .task_ru  CMakeLists.txt  CMakeLists_modular.txt  CMakePresets.json  CMakeUserPresets.json  DEMO_SUCCESS.md  Dockerfile  Makefile_realtime  README.md  docker-compose.yml
benchmarks/: README.md  benchmark_basic.cpp  benchmark_celero.cpp  benchmark_latency.cpp  benchmark_memory.cpp  benchmark_multithreading.cpp  benchmark_optimization_comparison.cpp  benchmark_packet_processing.cpp  benchmark_simple.cpp  benchmark_throughput.cpp  main_benchmark.cpp  main_modular_benchmark.cpp
cli/: cli.py
demo/: CMakeLists.txt  README.md  basic_tui_demo.cpp  build_and_run_demo.bat  clean_visual_demo.cpp  network_visualization.html  protocol_stack_demo.cpp  pure_tui_demo.cpp  real_network_demo.cpp  silent_animated_demo.cpp  simple_tui_demo.cpp  visual_tui_demo.cpp  windows_visual_demo.cpp
docker/: Dockerfile  demo.sh  docker-compose.yml  run_tests.sh
docs/: CMAKE_OPTIONS_GUIDE.md  MODULAR_ARCHITECTURE.md  MODULAR_SUMMARY.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  QUICK_START_GUIDE.md  README.md  architecture_visualization.html  index.html  mermaid-height-util.js  switch_animation_demo.html  switch_animation_realtime.html
examples/config/: topology.json
examples/demo/: README.md  animated_real_demo.cpp  clean_animated_demo.cpp  debug_clean_demo.cpp  enhanced_visual_demo.cpp  protocol_stack_demo.cpp  tui_animated_demo.cpp
examples/mini_switch/: CLI_FIX.md  CMAKE_BUILD_GUIDE.md  CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_simple.txt  DEMO.md  FIXES.md  Makefile  Makefile.simple  QUICK_START.md  README_STM32.md  build.ps1  build.sh  build_windows.ps1  server_mock.py  test_websocket.py  working_websocket_server.py
examples/mini_switch/include/: FreeRTOS.h  arp.h  common.h  constants.h  cross_platform.h  dashboard.h  ethernet.h  freertos_config.h  ip.h  mac_table.h  port.h  ring_buffer.h  semantic_types.h  switch_core.h  tx_simple.h
examples/mini_switch/scripts/: demo.sh  demo_dashboard.sh  demo_simple.sh  netns_demo.sh  test_arp.sh  test_debug.sh
examples/mini_switch/src/: arp.c  demo_simple.c  fdb_orch.c  forwarding.c  hash_table.c  logging.c  mac_table.c  main.c  main_windows.c  orchagent.c  port.c  ring_buffer.c  sonic_architecture.h  sonic_types.c  switch_core.c  switch_hal.c  switch_tasks.c  tx_simple.c  utils.c  version.h.in  visual.c  visual_simple.c  vlan.c
examples/mini_switch/tests/: test_simple.c
include/: constants.h
mini_switch/: Makefile.stm32  README.md  README_DEMO.md  README_SONiC.md  REFACTORING_SUMMARY.md  build_demo.ps1  final_server.py  minimal_websocket.py  simple_server.py  simple_websocket_server.py
mini_switch/config/: sonic_config.json.in
mini_switch/include/: common.h  cross_platform.h  forwarding.h  forwarding_simple.h  net_utils.h  switch_hal.h  visual.h  vlan.h
mini_switch/scripts/: demo_debug.sh  demo_no_cli.sh  run_simple.sh  test_demo.sh
mini_switch/src/: dashboard.c  ethernet.c  ip.c  list.c  main_windows.c  memory.c  net_utils.c  orchagent.c  simple_dashboard.c  sonic_types.h  switch_core.c  timer.c  visual_dashboard.c
mini_switch/tests/: test_fdb_orch.cpp  test_sonic_types.cpp
scripts/: check_performance_regression.py  generate_performance_charts.py
src/: main.cpp  main_modular.cpp  realtime_demo.c
src/applications/: app.cpp  app.ixx
src/common/: types.hpp
src/core/: app.cpp  app.h  app_basic.cpp  app_basic.h  boost_wrappers.ixx  constants.ixx  event_loop.cpp  event_loop.h  events.ixx  types.ixx  utils.cpp  utils.ixx  utils_optimized.cpp  utils_optimized.ixx
src/core/common/: types.hpp
src/core/utils/: spsc_queue.hpp
src/dataplane/: packet.h  pipeline.cpp  pipeline.h  pipeline_thread.cpp  pipeline_thread.h
src/l2/: l2_service.cpp  l2_service.h
src/l3/: l3_service.cpp  l3_service.h  lpm_trie.cpp  lpm_trie.h
src/link/: tcp_link_async.cpp  tcp_link_async.h
src/modules/: app.cpp  app.ixx  dataplane.cpp  dataplane.ixx  dataplane_optimized.cpp  dataplane_optimized.ixx  l2l3.cpp  l2l3.ixx  networking.cpp  networking.ixx  protocol.cpp  sai.cpp  sai.ixx  serialization.ixx  utils.cpp  utils.ixx  utils_optimized.cpp  utils_optimized.ixx
src/networking/: networking.cpp  networking.ixx  tcp_link.ixx
src/networking/link/: tcp_link_async.cpp  tcp_link_async.h
src/protocols/: gossip.cpp  gossip.ixx  protocol.cpp  protocol.ixx  serialization.ixx  websocket.cpp  websocket.ixx
src/sai/: sai_interface.h  simulated_sai.cpp  simulated_sai.h
src/switching/: dataplane.cpp  dataplane.ixx  dataplane_optimized.cpp  l2l3.cpp  l2l3.ixx  sai.cpp  sai.ixx
src/switching/dataplane/: packet.h  packet_enhanced.ixx  pipeline.cpp  pipeline.h  pipeline_thread.cpp  pipeline_tracing.ixx
src/switching/l2/: l2_service.cpp
src/switching/l3/: arp_pending_queue.ixx  l3_service.cpp  l3_service.h  lpm_trie.cpp  lpm_trie.h
src/switching/sai/: simulated_sai.h
src/utils/: metrics.hpp  spsc_queue.hpp
src/visualization/: event_server.cpp  event_server.h  event_server_main.cpp  qt_visualizer.cpp  tcp_event_server.cpp  visual_events_schema.json  visualizer_core.cpp  visualizer_core.h  visualizer_core_std.cpp  visualizer_core_std.h
tests/: main_test.cpp
tests/integration/: test_end_to_end.cpp  test_pipeline.cpp
tests/unit/: test_arp_pending_queue.cpp  test_boost_wrappers.cpp  test_constants.cpp  test_events.cpp  test_gossip.cpp  test_l2_service.cpp  test_l3_service.cpp  test_lpm_trie.cpp  test_packet_enhanced.cpp  test_protocol.cpp  test_sai.cpp  test_serialization.cpp  test_utils.cpp  test_websocket.cpp
tools/benchmarks/: benchmark_basic.cpp  benchmark_celero_simple_working.cpp  benchmark_latency.cpp  benchmark_memory.cpp  main_benchmark.cpp  main_modular_benchmark.cpp
tools/scripts/: run.sh
web_visualizer/: index.html
